--- a/listing/index.html
+++ b/listing/index.html
@@ -25,9 +25,6 @@
                 <a class="nav-link text-white" href="/profile/">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/listings/">Listings</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link text-white" href="/listing/create/">Create listing</a>
               </li>
             </ul>
@@ -39,7 +36,9 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main class="flex-grow1 bg-dark text-light">
+      <div class="container"></div>
+    </main>
     <footer class="fixed-bottom text-white">
       <div class="justify-content-center border-top p-2">
         <p class="text-center">© 2024 Northern Auction</p>
