--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -22,13 +22,10 @@
                 <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/">My profile</a>
+                <a class="nav-link text-white" href="/profile/login">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/listings/">Listings</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/listing/create/">Create listing</a>
+                <a class="nav-link text-white" href="/profile/login">Create listing</a>
               </li>
             </ul>
             <form class="d-flex" role="search" id="search-form">
@@ -39,7 +36,38 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main class="d-flex justify-content-center align-items-center min-vh-100 text-white">
+      <div class="container-fluid my-5 py-5">
+        <div class="row justify-content-center">
+          <div class="col-md-4">
+            <form id="registerForm">
+              <h1 class="h3 mb-3">Required *</h1>
+              <div class="form-group mb-3">
+                <label for="">Name: *</label>
+                <input class="form-control" type="text" name="name" required pattern="^[\w]+$" title="User name must only contain lower case and upper case letters, numbers and underscore (_). Example: My_Username_23." />
+              </div>
+              <div class="form-group mb-3">
+                <label for="">Email: *</label>
+                <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="@(stud.)noroff.no are the only domains allowed to register." />
+              </div>
+              <div class="form-group mb-3">
+                <label for="">Password: *</label>
+                <input class="form-control" type="password" name="password" required minlength="8" />
+              </div>
+              <div class="form-group mb-3">
+                <label for="">Banner:</label>
+                <input class="form-control" type="url" name="banner" />
+              </div>
+              <div class="form-group mb-3">
+                <label for="">Avatar:</label>
+                <input class="form-control" type="url" name="avatar" />
+              </div>
+              <button class="btn btn-success">Register</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="fixed-bottom text-white">
       <div class="justify-content-center border-top p-2">
         <p class="text-center">© 2024 Northern Auction</p>
