--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Northern Auction home page" />
     <title>Northern Auction | Home</title>
-    <link rel="stylesheet" href="dist/css/styles.css" />
+    <link rel="stylesheet" href="/dist/css/styles.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -22,13 +22,10 @@
                 <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/">My profile</a>
+                <a class="nav-link text-white" href="/profile/login">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/listings/">Listings</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/listing/create/">Create listing</a>
+                <a class="nav-link text-white" href="/profile/login">Create listing</a>
               </li>
             </ul>
             <form class="d-flex" role="search" id="search-form">
@@ -39,7 +36,32 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main class="d-flex align-items-center text-white">
+      <div class="container-fluid my-5 py-5">
+        <div class="row justify-content-center">
+          <div class="col-md-4">
+            <h1 class="h3 mb-3">Welcome to Northern Auction. Sign in to bid or create listings.</h1>
+            <div class="d-flex justify-content-evenly">
+              <a href="/profile/login/"><button class="btn btn-lg btn-primary btn-block">Sign in</button></a>
+              <a href="/profile/register/"><button class="btn btn-lg btn-secondary btn-block">Register</button></a>
+            </div>
+          </div>
+          <div class="col-md-9 my-5 py-5">
+            <div>
+              <a href="/profile/login"><button class="btn btn-success">Create a new listing</button></a>
+            </div>
+            <div class="d-flex justify-content-between align-items-center mt-5">
+              <h1>Listings</h1>
+              <select class="btn btn-primary" type="button" id="selection" aria-expanded="false">
+                <option value="newest">Newest</option>
+                <option value="oldest">Oldest</option>
+              </select>
+            </div>
+            <div class="listings" id="listing"></div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="fixed-bottom text-white">
       <div class="justify-content-center border-top p-2">
         <p class="text-center">© 2024 Northern Auction</p>
