--- a/listings/index.html
+++ b/listings/index.html
@@ -12,20 +12,17 @@
     <header class="fixed-top border-bottom">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Northern Auction</a>
+          <a class="navbar-brand" href="/listings/">Northern Auction</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="/listings/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/profile/">My profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="/listings/">Listings</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/listing/create/">Create listing</a>
@@ -39,7 +36,25 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main class="d-flex align-items-center text-white">
+      <div class="container-fluid my-5 py-5">
+        <div class="row justify-content-center">
+          <div class="col-md-9">
+            <div>
+              <a href="/listing/create/"><button class="btn btn-success">Create a new listing</button></a>
+            </div>
+            <div class="d-flex justify-content-between align-items-center mt-5">
+              <h1>Listings</h1>
+              <select class="btn btn-primary" type="button" id="selection" aria-expanded="false">
+                <option value="newest">Newest</option>
+                <option value="oldest">Oldest</option>
+              </select>
+            </div>
+            <div class="listings" id="listing"></div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer class="fixed-bottom text-white">
       <div class="justify-content-center border-top p-2">
         <p class="text-center">© 2024 Northern Auction</p>
