Added icons to profile page
- Added icons to profile page.

- Various small changes.

--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -12,7 +12,7 @@
     <header class="fixed-top border-bottom">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Northern Auction</a>
+          <a class="navbar-brand" href="/listings/">Northern Auction</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
