--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -12,14 +12,14 @@
     <header class="fixed-top border-bottom">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Northern Auction</a>
+          <a class="navbar-brand" href="/listings/">Northern Auction</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="/listings/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/profile/">My profile</a>
@@ -41,7 +41,7 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-6">
             <form id="createListing">
-              <h1 class="h3 mb-3">Required *</h1>
+              <h1 class="h3 mb-3 fw-bold">Required *</h1>
               <div class="form-group mb-3">
                 <label for="">Title: *</label>
                 <input class="form-control" type="text" name="title" required />
