--- a/profile/index.html
+++ b/profile/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Northern Auction home page" />
     <title>Northern Auction | Home</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -43,19 +44,21 @@
             <div class="d-flex justify-content-evenly" id="profile-container"></div>
           </div>
           <div class="col-md-9 my-5 py-5">
-            <div class="d-flex">
-              <a href="/listing/create/" class="me-2"><button class="btn btn-success">Create a new listing</button></a>
+            <div class="d-flex justify-content-center">
               <a href="/profile/edit/" class="me-2"><button class="btn btn-success">Edit profile</button></a>
-              <a href=""><button class="btn btn-success">Log Out</button></a>
+              <a href=""><button class="btn btn-danger">Log Out</button></a>
             </div>
-            <div class="d-flex justify-content-between align-items-center mt-5">
-              <h1>Your listings</h1>
-              <select class="btn btn-primary" type="button" id="selection" aria-expanded="false">
-                <option value="newest">Newest</option>
-                <option value="oldest">Oldest</option>
-              </select>
+            <div class="d-grid col-5 mx-auto mt-5">
+              <a href="/listing/create/" class="p-2 d-grid gap-2">
+                <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your listings<i class="bi bi-arrow-right-short"></i></button>
+              </a>
+              <a href="/listing/create/" class="p-2 d-grid gap-2">
+                <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your bids<i class="bi bi-arrow-right-short"></i></button>
+              </a>
+              <a href="/listing/create/" class="p-2 d-grid gap-2">
+                <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your winning bids<i class="bi bi-arrow-right-short"></i></button>
+              </a>
             </div>
-            <div class="listings" id="listing"></div>
           </div>
         </div>
       </div>
