--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -41,7 +41,7 @@
         <div class="row justify-content-center">
           <div class="col-md-4">
             <form id="registerForm">
-              <h1 class="h3 mb-3">Required *</h1>
+              <h1 class="h3 mb-3 fw-bold">Required *</h1>
               <div class="form-group mb-3">
                 <label for="">Name: *</label>
                 <input class="form-control" type="text" name="name" required pattern="^[\w]+$" title="User name must only contain lower case and upper case letters, numbers and underscore (_). Example: My_Username_23." />
