Added most of the needed js files
- Added the needed js files, but not complete.

- Added .env

--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -51,12 +51,16 @@
                 <input class="form-control" type="email" disabled name="email" />
               </div>
               <div class="form-group mb-3">
-                <label for="">Banner:</label>
-                <input class="form-control" type="url" name="banner" />
+                <label for="">Bio:</label>
+                <textarea class="form-control" name="bio"></textarea>
               </div>
               <div class="form-group mb-3">
                 <label for="">Avatar:</label>
                 <input class="form-control" type="url" name="avatar" />
+              </div>
+              <div class="form-group mb-3">
+                <label for="">Banner:</label>
+                <input class="form-control" type="url" name="banner" />
               </div>
               <button class="btn btn-success">Update Profile</button>
             </form>
