--- a/profile/index.html
+++ b/profile/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="/dist/css/styles.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <script type="module" src="/src/js/index.mjs" defer></script>
     <script type="module" src="/src/js/handlers/readUserListings.mjs" defer></script>
   </head>
   <body>
     <header class="fixed-top border-bottom">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Northern Auction</a>
+          <a class="navbar-brand" href="/listings/">Northern Auction</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -47,7 +48,7 @@
           <div class="col-md-9 my-5 py-5">
             <div class="d-flex justify-content-center">
               <a href="/profile/edit/" class="me-2"><button class="btn btn-success">Edit profile</button></a>
-              <a href=""><button class="btn btn-danger">Log Out</button></a>
+              <a href=""><button id="logoutButton" class="btn btn-danger">Log Out</button></a>
             </div>
             <div class="d-grid col-5 mx-auto mt-5">
               <a href="/listing/create/" class="p-2 d-grid gap-2">
