--- a/profile/index.html
+++ b/profile/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <script type="module" src="/src/js/index.mjs" defer></script>
-    <script type="module" src="/src/js/handlers/readUserListings.mjs" defer></script>
   </head>
   <body>
     <header class="fixed-top border-bottom">
@@ -45,7 +44,7 @@
           <div class="col-md-4">
             <div class="d-flex justify-content-evenly" id="profile-container"></div>
           </div>
-          <div class="col-md-9 my-5 py-5">
+          <div class="col-md-9">
             <div class="d-flex justify-content-center">
               <a href="/profile/edit/" class="me-2"><button class="btn btn-success">Edit profile</button></a>
               <a href=""><button id="logoutButton" class="btn btn-danger">Log Out</button></a>
