Rendered listings on the page
- Made the listings visible on page.

- Redirect to specific listing when clicking on one.

--- a/listing/index.html
+++ b/listing/index.html
@@ -37,8 +37,8 @@
         </div>
       </nav>
     </header>
-    <main class="flex-grow1 bg-dark text-light">
-      <div class="container"></div>
+    <main class="d-flex align-items-center text-white">
+      <div class="container my-5 py-5"></div>
     </main>
     <footer class="fixed-bottom text-white">
       <div class="justify-content-center border-top p-2">
