--- a/listings/index.html
+++ b/listings/index.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <main class="d-flex align-items-center text-white">
-      <div class="container-fluid my-5 py-5">
+      <div class="container my-5 py-5">
         <div class="row justify-content-center">
           <div class="col-md-9">
             <div>
@@ -51,7 +51,7 @@
                 <option value="oldest">Oldest</option>
               </select>
             </div>
-            <div class="listings" id="listing"></div>
+            <div class="listings row" id="listing"></div>
           </div>
         </div>
       </div>
