--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -23,10 +23,10 @@
                 <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/login">My profile</a>
+                <a class="nav-link text-white" href="/profile/login/">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/login">Create listing</a>
+                <a class="nav-link text-white" href="/profile/login/">Create listing</a>
               </li>
             </ul>
             <form class="d-flex" role="search" id="search-form">
