--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -59,6 +59,10 @@
                 <label for="">Media:</label>
                 <input class="form-control" type="url" name="media" />
               </div>
+              <div class="form-group mb-3">
+                <label for="">Ends at: *</label>
+                <input class="form-control" type="datetime-local" name="endsAt" required />
+              </div>
               <button class="btn btn-success">Create Listing</button>
             </form>
           </div>
