--- a/profile/userlistingsbids/index.html
+++ b/profile/userlistingsbids/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Northern Auction home page" />
-    <title>Northern Auction | Home</title>
+    <title>Northern Auction | Your bids</title>
     <link rel="stylesheet" href="/dist/css/styles.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <script type="module" src="/src/js/index.mjs" defer></script>
+    <script type="module" src="/src/js/handlers/readUserBids.mjs" defer></script>
   </head>
   <body>
     <header class="fixed-top border-bottom">
@@ -39,27 +39,20 @@
       </nav>
     </header>
     <main class="d-flex align-items-center text-white">
-      <div class="container-fluid my-5 py-5">
+      <div class="container my-5 py-5">
         <div class="row justify-content-center">
-          <div class="col-md-4">
-            <div class="d-flex justify-content-evenly" id="profile-container"></div>
-          </div>
           <div class="col-md-9">
-            <div class="d-flex justify-content-center">
-              <a href="/profile/edit/" class="me-2"><button class="btn btn-success">Edit profile</button></a>
-              <a href=""><button id="logoutButton" class="btn btn-danger">Log Out</button></a>
+            <div>
+              <a href="/listing/create/"><button class="btn btn-success">Create a new listing</button></a>
             </div>
-            <div class="d-grid col-5 mx-auto mt-5">
-              <a href="/profile/userlistings/" class="p-2 d-grid gap-2">
-                <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your listings<i class="bi bi-arrow-right-short"></i></button>
-              </a>
-              <a href="/profile/userlistingsbids/" class="p-2 d-grid gap-2">
-                <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your bids<i class="bi bi-arrow-right-short"></i></button>
-              </a>
-              <a href="/profile/userlistingswins/" class="p-2 d-grid gap-2">
-                <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your winning bids<i class="bi bi-arrow-right-short"></i></button>
-              </a>
+            <div class="d-flex justify-content-between align-items-center mt-5">
+              <h1>Your bids</h1>
+              <select class="btn btn-primary" type="button" id="selection" aria-expanded="false">
+                <option value="newest">Newest</option>
+                <option value="oldest">Oldest</option>
+              </select>
             </div>
+            <div class="listings row" id="listing"></div>
           </div>
         </div>
       </div>
