--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -48,16 +48,45 @@
                 <input class="form-control" type="text" name="title" required />
               </div>
               <div class="form-group mb-3">
-                <label for="">Body: *</label>
-                <textarea class="form-control" name="body" required></textarea>
+                <label for="">Description: *</label>
+                <textarea class="form-control" name="description" required></textarea>
               </div>
               <div class="form-group mb-3">
                 <label for="">Tags:</label>
                 <input class="form-control" type="text" name="tags" />
               </div>
-              <div class="form-group mb-3">
-                <label for="">Media:</label>
-                <input class="form-control" type="url" name="media" />
+              <div class="d-flex justify-content-center align-items-center">
+                <div class="form-group mb-3 col-md-5">
+                  <label for="mediaUrl1">Image URL 1:</label>
+                  <input class="form-control" type="url" id="mediaUrl1" name="mediaUrl1" />
+
+                  <label for="mediaAlt1">Alternative text for image 1:</label>
+                  <input class="form-control mb-3" type="text" id="mediaAlt1" name="mediaAlt1" />
+
+                  <label for="mediaUrl2">Image URL 2:</label>
+                  <input class="form-control" type="url" id="mediaUrl2" name="mediaUrl2" />
+
+                  <label for="mediaAlt2">Alternative text for image 2:</label>
+                  <input class="form-control mb-3" type="text" id="mediaAlt2" name="mediaAlt2" />
+
+                  <label for="mediaUrl3">Image URL 3:</label>
+                  <input class="form-control" type="url" id="mediaUrl3" name="mediaUrl3" />
+
+                  <label for="mediaAlt3">Alternative text for image 3:</label>
+                  <input class="form-control mb-3" type="text" id="mediaAlt3" name="mediaAlt3" />
+
+                  <label for="mediaUrl4">Image URL 4:</label>
+                  <input class="form-control" type="url" id="mediaUrl4" name="mediaUrl4" />
+
+                  <label for="mediaAlt4">Alternative text for image 4:</label>
+                  <input class="form-control mb-3" type="text" id="mediaAlt4" name="mediaAlt4" />
+
+                  <label for="mediaUrl5">Image URL 5:</label>
+                  <input class="form-control" type="url" id="mediaUrl5" name="mediaUrl5" />
+
+                  <label for="mediaAlt5">Alternative text for image 5:</label>
+                  <input class="form-control mb-3" type="text" id="mediaAlt5" name="mediaAlt5" />
+                </div>
               </div>
               <button class="btn btn-success me-2">Update Listing</button>
               <button class="btn btn-danger" id="deleteListing">Delete Listing</button>
