--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
     <main class="d-flex align-items-center text-white">
-      <div class="container-fluid my-5 py-5">
+      <div class="container my-5 py-5">
         <div class="row justify-content-center">
           <div class="col-md-4">
             <h1 class="h3 mb-3">Welcome to Northern Auction. Sign in to bid or create listings.</h1>
