--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/login/">My profile</a>
+                <a class="nav-link text-white" href="/src/html/profile/login/">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/login/">Create listing</a>
+                <a class="nav-link text-white" href="/src/html/profile/login/">Create listing</a>
               </li>
             </ul>
             <form class="d-flex" role="search" id="search-form">
@@ -42,8 +42,8 @@
           <div class="col-md-4">
             <h1 class="h3 mb-3">Welcome to Northern Auction. Sign in to bid or create listings.</h1>
             <div class="d-flex justify-content-evenly">
-              <a href="/profile/login/"><button class="btn btn-lg btn-primary btn-block">Sign in</button></a>
-              <a href="/profile/register/"><button class="btn btn-lg btn-secondary btn-block">Register</button></a>
+              <a href="/src/html/profile/login/"><button class="btn btn-lg btn-primary btn-block">Sign in</button></a>
+              <a href="/src/html/profile/register/"><button class="btn btn-lg btn-secondary btn-block">Register</button></a>
             </div>
           </div>
           <div class="col-md-9 my-5 py-5">
