--- a/src/listing/index.html
+++ b/src/listing/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Northern Auction home page" />
     <title>Northern Auction | Home</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <script type="module" src="/src/js/index.mjs" defer></script>
     <script defer type="module" src="/src/js/handlers/readListing.mjs" defer></script>
   </head>
   <body>
