--- a/src/profile/login/index.html
+++ b/src/profile/login/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Northern Auction home page" />
-    <title>Northern Auction | Your listings</title>
+    <title>Northern Auction | Login</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <script type="module" src="/src/js/handlers/readUserListings.mjs" defer></script>
+    <script type="module" src="/src/js/index.mjs" defer></script>
   </head>
   <body>
     <header class="fixed-top border-bottom">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/listings/">Northern Auction</a>
+          <a class="navbar-brand" href="/">Northern Auction</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/listings/">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/">My profile</a>
+                <a class="nav-link text-white" href="/src/profile/login/">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/listing/create/">Create listing</a>
+                <a class="nav-link text-white" href="/src/profile/login/">Create listing</a>
               </li>
             </ul>
             <form class="d-flex" role="search" id="search-form">
@@ -36,21 +36,25 @@
         </div>
       </nav>
     </header>
-    <main class="d-flex align-items-center text-white">
-      <div class="container my-5 py-5">
+    <main class="d-flex justify-content-center align-items-center min-vh-100 text-white">
+      <div class="container-fluid my-5 py-5">
         <div class="row justify-content-center">
-          <div class="col-md-9">
-            <div>
-              <a href="/listing/create/"><button class="btn btn-success">Create a new listing</button></a>
-            </div>
-            <div class="d-flex justify-content-between align-items-center mt-5">
-              <h1>Your listings</h1>
-              <select class="btn btn-primary" type="button" id="selection" aria-expanded="false">
-                <option value="newest">Newest</option>
-                <option value="oldest">Oldest</option>
-              </select>
-            </div>
-            <div class="listings row" id="listing"></div>
+          <div class="col-md-4">
+            <form id="loginForm">
+              <div class="form-group mb-3">
+                <h1 class="h3 mb-3">Please sign in with your registered “stud.noroff.no” email.</h1>
+                <label for="">Email:</label>
+                <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="@(stud.)noroff.no are the only domains allowed to login." />
+              </div>
+              <div class="form-group mb-3">
+                <label for="">Password:</label>
+                <input class="form-control" type="password" name="password" required minlength="8" />
+              </div>
+              <div class="d-flex justify-content-evenly">
+                <button class="btn btn-lg btn-primary btn-block">Login</button>
+                <a href="/src/profile/register/"><button class="btn btn-lg btn-secondary btn-block" type="button">Register</button></a>
+              </div>
+            </form>
           </div>
         </div>
       </div>
