--- a/src/profile/userlistingswins/index.html
+++ b/src/profile/userlistingswins/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Northern Auction home page" />
-    <title>Northern Auction | Home</title>
+    <title>Northern Auction | Your wins</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <script type="module" src="/src/js/index.mjs" defer></script>
+    <script type="module" src="/src/js/handlers/readUserWins.mjs" defer></script>
   </head>
   <body>
     <header class="fixed-top border-bottom">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/listings/">Northern Auction</a>
+          <a class="navbar-brand" href="/src/listings/">Northern Auction</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/listings/">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="/src/listings/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/">My profile</a>
+                <a class="nav-link text-white" href="/src/profile/">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/listing/create/">Create listing</a>
+                <a class="nav-link text-white" href="/src/listing/create/">Create listing</a>
               </li>
             </ul>
             <form class="d-flex" role="search" id="search-form">
@@ -40,12 +40,9 @@
       <div class="container my-5 py-5">
         <div class="row justify-content-center">
           <div class="col-md-9">
-            <div>
-              <a href="/listing/create/"><button class="btn btn-success">Create a new listing</button></a>
-            </div>
             <div class="d-flex justify-content-between align-items-center mt-5">
-              <h1>Listings</h1>
-              <select class="btn btn-primary" type="button" id="selection" aria-expanded="false">
+              <h1>Your wins</h1>
+              <select class="btn btn-primary mb-2" type="button" id="selection" aria-expanded="false">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
               </select>
