--- a/profile/userlistingswins/index.html
+++ b/profile/userlistingswins/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/listings/">Home</a>
+                <a class="nav-link active text-white" href="/listings/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/profile/">My profile</a>
@@ -42,7 +42,7 @@
           <div class="col-md-9">
             <div class="d-flex justify-content-between align-items-center mt-5">
               <h1>Your wins</h1>
-              <select class="btn btn-primary mb-2" type="button" id="selection" aria-expanded="false">
+              <select class="btn btn-primary" id="selection" aria-expanded="false" aria-label="Choose a sorting option:">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
               </select>
