--- a/listings/index.html
+++ b/listings/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="d-flex justify-content-between align-items-center mt-5">
               <h1>Listings</h1>
-              <select class="btn btn-primary" type="button" id="selection" aria-expanded="false">
+              <select class="btn btn-primary" id="selection" aria-expanded="false" aria-label="Choose a sorting option:">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
               </select>
