--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/listings/">Home</a>
+                <a class="nav-link active text-white" href="/listings/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/profile/">My profile</a>
@@ -41,21 +41,22 @@
         <div class="row justify-content-center">
           <div class="col-md-4">
             <form id="editProfile">
+              <h1 class="h2 mb-3 fw-bold">Edit Profile</h1>
               <div class="form-group mb-3">
-                <label for="">Name:</label>
-                <input class="form-control" type="text" disabled name="name" />
+                <label for="name">Name:</label>
+                <input class="form-control" type="text" disabled id="name" name="name" />
               </div>
               <div class="form-group mb-3">
-                <label for="">Email:</label>
-                <input class="form-control" type="email" disabled name="email" />
+                <label for="email">Email:</label>
+                <input class="form-control" type="email" disabled id="email" name="email" />
               </div>
               <div class="form-group mb-3">
-                <label for="">Bio:</label>
-                <textarea class="form-control" name="bio"></textarea>
+                <label for="bio">Bio:</label>
+                <textarea class="form-control" id="bio" name="bio"></textarea>
               </div>
               <div class="form-group mb-3">
-                <label for="">Avatar:</label>
-                <input class="form-control" type="url" name="avatar" />
+                <label for="avatar">Avatar:</label>
+                <input class="form-control" type="url" id="avatar" name="avatar" />
               </div>
               <button class="btn btn-success">Update Profile</button>
             </form>
