--- a/profile/index.html
+++ b/profile/index.html
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/listings/">Home</a>
+                <a class="nav-link active text-white" href="/listings/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/profile/">My profile</a>
+                <a class="nav-link text-white" aria-current="page" href="/profile/">My profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/listing/create/">Create listing</a>
