--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
+                <a class="nav-link active text-white" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="/profile/login/">My profile</a>
@@ -43,12 +43,12 @@
             <form id="loginForm">
               <div class="form-group mb-3">
                 <h1 class="h3 mb-3">Please sign in with your registered “stud.noroff.no” email.</h1>
-                <label for="">Email:</label>
-                <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="@(stud.)noroff.no are the only domains allowed to login." />
+                <label for="email">Email:</label>
+                <input class="form-control" type="email" id="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="@(stud.)noroff.no are the only domains allowed to login." />
               </div>
               <div class="form-group mb-3">
-                <label for="">Password:</label>
-                <input class="form-control" type="password" name="password" required minlength="8" />
+                <label for="password">Password:</label>
+                <input class="form-control" type="password" id="password" name="password" required minlength="8" />
               </div>
               <div class="d-flex justify-content-evenly">
                 <button class="btn btn-lg btn-primary btn-block">Login</button>
