Prev and next button
- Added prev and next button.

- Small fixes

--- a/listings/index.html
+++ b/listings/index.html
@@ -30,7 +30,7 @@
             </ul>
             <form class="d-flex" role="search" id="search-form">
               <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-              <button class="btn btn-primary" type="submit">Search</button>
+              <button class="btn btn-primary border" type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -51,6 +51,10 @@
               </select>
             </div>
             <div class="listings row" id="listing"></div>
+            <div class="d-flex justify-content-between">
+              <button id="prevPageButton" class="btn btn-primary mt-3">Previous Page</button>
+              <button id="nextPageButton" class="btn btn-primary mt-3">Next Page</button>
+            </div>
           </div>
         </div>
       </div>
