--- a/listings/index.html
+++ b/listings/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Northern Auction logged in user home page and all listings" />
     <title>Northern Auction | Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <script type="module" src="/src/js/index.mjs" defer></script>
   </head>
@@ -52,8 +53,8 @@
             </div>
             <div class="listings row" id="listing"></div>
             <div class="d-flex justify-content-between">
-              <button id="prevPageButton" class="btn btn-primary mt-3">Previous Page</button>
-              <button id="nextPageButton" class="btn btn-primary mt-3">Next Page</button>
+              <button id="prevPageButton" class="btn btn-primary mt-3"><i class="bi bi-arrow-left-short"></i>Previous Page</button>
+              <button id="nextPageButton" class="btn btn-primary mt-3">Next Page<i class="bi bi-arrow-right-short"></i></button>
             </div>
           </div>
         </div>
