Various small changes

--- a/profile/index.html
+++ b/profile/index.html
@@ -49,13 +49,13 @@
               <a href=""><button id="logoutButton" class="btn btn-danger">Log Out</button></a>
             </div>
             <div class="d-grid col-5 mx-auto mt-5">
-              <a href="/profile/userlistings/" class="p-2 d-grid gap-2">
+              <a href="/profile/userlistings/" class="p-2 d-grid gap-2 text-decoration-none">
                 <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your listings<i class="bi bi-arrow-right-short"></i></button>
               </a>
-              <a href="/profile/userlistingsbids/" class="p-2 d-grid gap-2">
+              <a href="/profile/userlistingsbids/" class="p-2 d-grid gap-2 text-decoration-none">
                 <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your bids<i class="bi bi-arrow-right-short"></i></button>
               </a>
-              <a href="/profile/userlistingswins/" class="p-2 d-grid gap-2">
+              <a href="/profile/userlistingswins/" class="p-2 d-grid gap-2 text-decoration-none">
                 <button class="btn btn-secondary just d-flex justify-content-between fw-bold">Your winning bids<i class="bi bi-arrow-right-short"></i></button>
               </a>
             </div>
