--- a/profile/userlistingsbids/index.html
+++ b/profile/userlistingsbids/index.html
@@ -45,7 +45,7 @@
               <a href="/listing/create/"><button class="btn btn-success">Create a new listing</button></a>
             </div>
             <div class="d-flex justify-content-between align-items-center mt-5">
-              <h1>Your bids</h1>
+              <h1 class="fw-bold">Your bids</h1>
               <select class="btn btn-primary" id="selection" aria-expanded="false" aria-label="Choose a sorting option:">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
