--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
           <div class="col-md-9 my-5 py-5">
             <div class="d-flex justify-content-between align-items-center mt-5">
-              <h1>Listings</h1>
+              <h1 class="fw-bold">Listings</h1>
               <select class="btn btn-primary" id="selection" aria-expanded="false" aria-label="Choose a sorting option:">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
