--- a/profile/userlistingswins/index.html
+++ b/profile/userlistingswins/index.html
@@ -42,7 +42,7 @@
         <div class="row justify-content-center">
           <div class="col-md-9">
             <div class="d-flex justify-content-between align-items-center mt-5">
-              <h1>Your wins</h1>
+              <h1 class="fw-bold">Your wins</h1>
               <select class="btn btn-primary" id="selection" aria-expanded="false" aria-label="Choose a sorting option:">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
